Medical Requests List Added

--- a/AN.Web/Areas/Admin/Views/Shared/_AdminSidebarMenuPartial.cshtml
+++ b/AN.Web/Areas/Admin/Views/Shared/_AdminSidebarMenuPartial.cshtml
@@ -50,6 +50,8 @@
 
 <li class="nav-item"><a class="nav-link" href="@Url.Action("Requests","Appointment", new { area = "Admin" })"><i class="nav-icon fa fa-calendar-plus"></i><p>@Global.AppointmentRequests</p></a></li>
 
+<li class="nav-item"><a class="nav-link" href="@Url.Action("Index","MedicalRequest", new { area = "Admin" })"><i class="nav-icon fa fa-file-medical"></i><p>Medical Requests</p></a></li>
+
 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Notification", new { area = "Admin" })"><i class="nav-icon fa fa-bell"></i><p>@Global.Notification</p></a></li>
 
 <li class="nav-item has-treeview">
