--- a/AN.Web/Areas/Admin/Views/Shared/_AdminSidebarMenuPartial.cshtml
+++ b/AN.Web/Areas/Admin/Views/Shared/_AdminSidebarMenuPartial.cshtml
@@ -15,7 +15,7 @@
                 <i class="far fa-circle nav-icon"></i>
                 <p>@Global.Places</p>
             </a>
-        </li>       
+        </li>
         <li class="nav-item">
             <a href="@Url.Action("Tabs","Expertise", new { area = "Admin" })" class="nav-link"><i class="far fa-circle nav-icon"></i><p>@PanelResource.Expertises</p></a>
         </li>
@@ -27,6 +27,11 @@
         </li>
     </ul>
 </li>
+
+@if (User.IsInRole(Shared.Constants.SystemRoles.ADMIN))
+{
+    
+}
 
 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Hospital", new { area = "Admin" })"><i class="nav-icon fa fa-h-square"></i><p>@AN.Core.Resources.Global.Global.Hospitals</p></a></li>
 
@@ -46,11 +51,11 @@
 
 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Contact", new { area = "Admin" })"><i class="nav-icon fa fa-phone"></i><p>@PanelResource.ContactUs</p></a></li>
 
-<li class="nav-item"><a class="nav-link" href="@Url.Action("Index","RegisterRequest", new { area = "Admin" })"><i class="nav-icon fa fa-registered"></i><p>@Global.RegistrationRequests</p></a></li>
+<li class="nav-item"><a class="nav-link" href="@Url.Action("Index","RegisterRequest", new { area = "" })"><i class="nav-icon fa fa-registered"></i><p>@Global.RegistrationRequests</p></a></li>
 
-<li class="nav-item"><a class="nav-link" href="@Url.Action("Requests","Appointment", new { area = "Admin" })"><i class="nav-icon fa fa-calendar-plus"></i><p>@Global.AppointmentRequests</p></a></li>
+<li class="nav-item"><a class="nav-link" href="@Url.Action("Requests","AppointmentRequest", new { area = "" })"><i class="nav-icon fa fa-calendar-plus"></i><p>@Global.AppointmentRequests</p></a></li>
 
-<li class="nav-item"><a class="nav-link" href="@Url.Action("Index","MedicalRequest", new { area = "Admin" })"><i class="nav-icon fa fa-file-medical"></i><p>Medical Requests</p></a></li>
+<li class="nav-item"><a class="nav-link" href="@Url.Action("Index","MedicalRequest", new { area = "" })"><i class="nav-icon fa fa-file-medical"></i><p>Medical Requests</p></a></li>
 
 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Notification", new { area = "Admin" })"><i class="nav-icon fa fa-bell"></i><p>@Global.Notification</p></a></li>
 
