--- a/AN.Web/Areas/PolyClinicManager/Views/Shared/_PolyClinicManagerSidebarMenuPartial.cshtml
+++ b/AN.Web/Areas/PolyClinicManager/Views/Shared/_PolyClinicManagerSidebarMenuPartial.cshtml
@@ -11,8 +11,16 @@
 
     <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","MedicalRequest", new { area = "" })"><i class="nav-icon fa fa-file-medical"></i><p>Medical Requests</p></a></li>
 }
+else if (User.IsInRole(Shared.Constants.SystemRoles.MEDICALTOURISM))
+{
+    <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","MedicalRequest", new { area = "" })"><i class="nav-icon fa fa-file-medical"></i><p>Medical Requests</p></a></li>
+}
 else
 {
+    if (User.IsInRole(Shared.Constants.SystemRoles.HOMECAREMANAGER))
+    {
+        <li class="nav-item"><a class="nav-link" href="@Url.Action("Requests","AppointmentRequest", new { area = "" })"><i class="nav-icon fa fa-calendar-plus"></i><p>@Global.AppointmentRequests</p></a></li>
+    }
     <li class="nav-item has-treeview">
         <a href="#" class="nav-link" id="pcmTurnsNavLink">
             <i class="nav-icon fas fa-calendar"></i>
