--- a/AN.Web/Views/Polyclinic/SetHealthServices.cshtml
+++ b/AN.Web/Views/Polyclinic/SetHealthServices.cshtml
@@ -46,11 +46,12 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="row">
                         <div class="col-md-12">
-                            <table id="servicesTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <table id="servicesTable" class="table table-striped" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
-                                        <th><input type="checkbox" id="chkSelectAll" /></th>
+                                        <th><input type="checkbox" id="chkSelectAll" /></th>                                        
                                         <th>@Global.Name</th>
+                                        <th width="10%">@Global.Price</th>
                                         <th></th>
                                         <th></th>
                                     </tr>
