--- a/AN.Web/Views/AppointmentRequest/_AppointmentRequestActions.cshtml
+++ b/AN.Web/Views/AppointmentRequest/_AppointmentRequestActions.cshtml
@@ -9,6 +9,11 @@
             <i class="fa fa-check"></i>
         </button>
         <button type="button"
+                class="btn btn-outline-info btn-sm"
+                onclick="viewAppointmentRequest('@Model.id')" title="View Details">
+            <i class="fa fa-info-circle"></i>
+        </button>
+        <button type="button"
                 class="btn btn-outline-danger btn-sm"
                 onclick="deleteAppointmentRequest('@Model.id')" title="Delete">
             <i class="fa fa-trash"></i>
